# adaptive-voxel-pathtracer-claude

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test_performance.sh
src/: benchmark.rs  main.rs
src/octree/: mod.rs  static_provider.rs
src/renderer/: blit_pipeline.rs  compute_pipeline.rs  mod.rs  performance.rs  performance_monitor.rs
src/shaders/: blit.wgsl  ray_march.wgsl
