[package]
name = "adaptive-voxel-pathtracer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.2"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
futures-intrusive = "0.5.0"
image = "0.25.8"
log = "0.4.28"
nalgebra = "0.34.0"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"
